--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,17 @@
 apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
+
+    externalNativeBuild {
+        ndkBuild {
+            path 'src/main/jni/Android.mk'
+        }
+    }
+    defaultConfig{
+        ndk {
+            abiFilter 'armeabi-v7a'
+        }
+    }
 }
 
 
