--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,8 @@ android {
     compileSdkVersion 28
 
     externalNativeBuild {
-        ndkBuild {
-            path 'src/main/jni/Android.mk'
+        cmake {
+            path "src/main/cpp/CMakeLists.txt"
         }
     }
     defaultConfig{
