--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,23 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
 
+    // 生成gradle脚本
     externalNativeBuild {
-        cmake {
-            path "src/main/cpp/CMakeLists.txt"
-        }
+            cmake {
+                path "src/main/cpp/CMakeLists.txt"
+            }
     }
     defaultConfig{
         ndk {
-            abiFilter 'armeabi-v7a'
+//            abiFilter 'armeabi-v7a'
+        }
+        // 配置编译参数
+        externalNativeBuild {
+            cmake {
+
+                // 参数形式 "-DVAR_NAME=ARGUMENT" "-DVAR_NAME=ARG_1 ARG_2"
+//                arguments "-DANDROID_ARM_NEON=TRUE","-DANDROID_PLATFORM=android-28"
+            }
         }
     }
 }
